istio-manifests/primary/primary-internal-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: primary-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     credentialName: asm-tls-secret
    hosts:
#Ingress Gateway DNS host of Primary Cluster    
    # - api-primary.internal.<dns-name>
    - "primary.internal.<dns-name>"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: primary-virtual-service
spec:
  hosts:
#Ingress Gateway DNS host of Primary Cluster  
  # - api-primary.internal.<dns-name>
  - "primary.internal.<dns-name>"
  gateways:
  - primary-gateway  
  http:  
  #PodInfo service
  - match:
    - uri:
        prefix: /podinfo
    rewrite:
      uri: /    
    route:
    - destination:
        host: podinfo   
        subset: blue
        port:
          number: 9898 
      weight: 50
      
#UNCOMMENT: Test Blue/Green
    - destination:
        host: podinfo  
        subset: green 
        port:
          number: 9898 
      weight: 50
  #Hello World service
  - match:    
    - uri:
        prefix: /hello
    route:
    - destination:
        host: helloworld
  #UNCOMMENT: Introduce versioning        
        subset: v1
        port:
          number: 5000   
      weight: 100

#UNCOMMENT: Test Traffic Shifting
    # - destination:
    #     host: helloworld
    #     subset: v2
    #     port:
    #       number: 5000   
    #   weight: 50

#UNCOMMENT: Test Traffic Mirroring Or Shadowing - EXTERNAL
    # mirror:
    #   host: api-secondary.<dns-name>      
    #   port:
    #     # number: 443
    #     number: 80
    # mirrorPercentage:
    #   value: 100.0
#UNCOMMENT: Test Traffic Mirroring Or Shadowing - INTERNAL
    mirror:
      host: helloworld
      subset: v2
      port:
        number: 5000
    mirrorPercentage:
      value: 100.0

#UNCOMMENT: Test Circuit Breaking
  - match:
    - uri:
        prefix: /httpbin
    rewrite:
      uri: / 
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
#Bookinfo service
  - match:
    - uri:
        exact: /product
    rewrite:
      uri: /productpage 
    route:
    - destination:
        host: productpage
        port:
          number: 9080
  - match:  
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
